--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -31,5 +31,11 @@
     "webpack": "^4.6.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "webpack": "^4.25.1"
   }
 }
